# tvara

./: .dockerignore  .env.sample  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  test_agent.py
.github/workflows/: ci.yaml  ci.yml
docs/: USECASES.md
examples/: multi_agent_pipeline.py  sample_hierarchical_workflow.py  sample_hierarchical_workflow_demo.py  sample_sequential_workflow.py  sample_single_agent.py  sample_supervisor_workflow.py  single_agent.py  temp.py  test.py
tests/: test_agent.py  test_deployment.py  test_workflow.py
tvara/: __init__.py  run.py  version.py
tvara/cli/: main.py
tvara/connectors/: GitHubConnector.py  NotionConnector.py  SlackConnector.py  __init__.py  base.py
tvara/core/: __init__.py  agent.py  prompt.py  workflow.py
tvara/models/: __init__.py  base.py  claude.py  gemini.py  model_factory.py  openai.py  supported_models.py
tvara/prompts/: generic_prompts.py
tvara/tools/: BaseTool.py  CalculatorTool.py  CodeTool.py  ComposioTool.py  CustomTool.py  DateTool.py  WebSearchTool.py  __init__.py  base.py
tvara/utils/: auth_cache.py  auth_token_manager.py  prompt_templates.py
