[tool.poetry]
name = "tvara"
version = "0.1.2"
description = "A Python package for Tvara, a tool for automating workflows."
authors = ["Team Tvara <team@tvarahq.com>"]
license = "MIT"
readme = "README.md"
keywords = ["agents", "AI", "workflow", "tvara"]
homepage = "https://aitvara.in"
repository = "https://github.com/tvarahq/tvara"

[tool.poetry.scripts]
tvara = "tvara.cli.main:cli"

[tool.poetry.dependencies]
python = ">=3.9"
google-genai = "^1.27.0"
openai = "^1.99.1"
anthropic = "^0.61.0"
tavily-python = "^0.7.10"

[tool.poetry.dev-dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"