[tool.poetry]
name = "tvara"
version = "1.3.2"
description = "Code cleanup"
authors = ["Team Tvara <team@tvarahq.com>"]
license = "MIT"
readme = "README.md"
keywords = ["agents", "AI", "workflow", "tvara"]
homepage = "https://tvarahq.com"
repository = "https://github.com/tvarahq/tvara"

[tool.poetry.dependencies]
python = ">=3.10,<4"
google-genai = "^1.65.0"
openai = "^2.24.0"
anthropic = "^0.84.0"
tavily-python = "^0.7.22"
composio = "^0.11.1"
pydantic = "^2.12.5"

[tool.poetry.dev-dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
